--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
         <li data-target="#bg-carousel" data-slide-to="1"></li>
         <li data-target="#bg-carousel" data-slide-to="2"></li>
       </ol>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
+      <div class="carousel-inner" id="carousel-inner">
+        <div class="carousel-item active" id="carousel-item">
           <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\slide\slide-1.jpg" alt="Restaurant Image-1">
           <div class="container position-relative text-center text-lg-start aos-init aos-animate" data-aos="zoom-in" data-aos-delay="100">
             <div class="row">
-              <div class="col-md-6">
+              <div class="col-md-8 col-sm-12">
                 <div class="carousel-caption">
                   <h1 class="caption-heading">Welcome to Haukai Restaurant</h1>
                   <p class="caption-paragraph">Experience the best of New Zealand's seafood and produce.</p>
@@ -69,7 +69,7 @@
           <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\slide\slide-2.jpg" alt="Restaurant Image-2">
           <div class="container position-relative text-center text-lg-start aos-init aos-animate" data-aos="zoom-in" data-aos-delay="100">
             <div class="row">
-              <div class="col-md-6">
+              <div class="col-md-8 col-sm-12">
                 <div class="carousel-caption">
                   <h1 class="caption-heading">Welcome to Haukai Restaurant</h1>
                   <p class="caption-paragraph">Experience the best of New Zealand's seafood and produce.</p>
@@ -84,7 +84,7 @@
           <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\slide\slide-3.jpg" alt="Restaurant Image-3">
           <div class="container position-relative text-center text-lg-start aos-init aos-animate" data-aos="zoom-in" data-aos-delay="100">
             <div class="row">
-              <div class="col-md-6">
+              <div class="col-md-8 col-sm-12">
                 <div class="carousel-caption">
                   <h1 class="caption-heading">Welcome to Haukai Restaurant</h1>
                   <p class="caption-paragraph">Experience the best of New Zealand's seafood and produce.</p>
